--- a/views/about.erb
+++ b/views/about.erb
@@ -1,1 +1,37 @@
 <h2>О нас </h2>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      
+      <th scope="col">Day</th>
+      <th scope="col">Open Time</th>
+    </tr>
+  </thead>
+  <tbody>
+  
+  <tr>
+	<td>Mondey</td>
+	<td>10:00 - 18:00</td>
+  </tr>
+  <tr>
+	<td>Tuesday</td>
+	<td>10:00 - 18:00</td>
+  </tr><tr>
+  <td>Wednesday</td>
+  <td>10:00 - 18:00</td>
+</tr><tr>
+<td>Thursdey</td>
+<td>10:00 - 18:00</td>
+</tr><tr>
+<td>Fridey</td>
+<td>10:00 - 18:00</td>
+</tr><tr>
+<td>Saturdey</td>
+<td>10:00 - 17:00</td>
+</tr><tr>
+<td>Sundey</td>
+<td>10:00 - 17:00</td>
+</tr>
+  </tbody>
+</table>
